storybook and design setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "react-native start --reset-cache",
+    "storybook:android": "STORYBOOK_ENABLED=true react-native run-android",
+    "storybook:ios": "STORYBOOK_ENABLED=true react-native run-ios"
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.4.1",
@@ -20,7 +23,7 @@
     "react-native": "0.80.1",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -34,6 +37,11 @@
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
+    "@storybook/addon-ondevice-actions": "^9.0.14",
+    "@storybook/addon-ondevice-backgrounds": "^9.0.14",
+    "@storybook/addon-ondevice-controls": "^9.0.14",
+    "@storybook/addon-ondevice-notes": "^9.0.14",
+    "@storybook/react-native": "^9.0.14",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
