--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "storybook": "react-native start --reset-cache",
-    "storybook:android": "STORYBOOK_ENABLED=true react-native run-android",
-    "storybook:ios": "STORYBOOK_ENABLED=true react-native run-ios"
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.4.1",
@@ -37,11 +34,6 @@
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
-    "@storybook/addon-ondevice-actions": "^9.0.14",
-    "@storybook/addon-ondevice-backgrounds": "^9.0.14",
-    "@storybook/addon-ondevice-controls": "^9.0.14",
-    "@storybook/addon-ondevice-notes": "^9.0.14",
-    "@storybook/react-native": "^9.0.14",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
