lots of amazing updates including auth!

--- a/xUSD-App/package.json
+++ b/xUSD-App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xusd-app",
+  "name": "haven-app",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -11,12 +11,21 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.4.1",
     "@expo-google-fonts/playfair-display": "^0.4.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
     "@shopify/restyle": "^2.4.5",
     "expo": "~53.0.17",
     "expo-font": "^13.3.2",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.10.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
