--- a/xUSD-App/app.json
+++ b/xUSD-App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "xUSD-App",
-    "slug": "xUSD-App",
+    "name": "Haven",
+    "slug": "haven-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
