--- a/xUSD-App/package.json
+++ b/xUSD-App/package.json
@@ -14,9 +14,14 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@shopify/restyle": "^2.4.5",
+    "@web3auth/base": "^9.7.0",
+    "@web3auth/base-provider": "^9.7.0",
+    "@web3auth/single-factor-auth": "^9.5.0",
+    "algosdk": "^3.3.1",
     "expo": "~53.0.17",
     "expo-font": "^13.3.2",
     "expo-status-bar": "~2.2.3",
