--- a/xUSD-App/.env
+++ b/xUSD-App/.env
@@ -5,3 +5,5 @@ EXPO_PUBLIC_FIREBASE_PROJECT_ID=haven-4729b
 EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=haven-4729b.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=423790861852
 EXPO_PUBLIC_FIREBASE_APP_ID=1:423790861852:web:baa0b5ea402bb4acfe89d9
+
+EXPO_PUBLIC_WEB3AUTH_CLIENT_ID=BCP99vF-iI10ddZenZ3DSdwQQnbJHnmnrakuTPoOadlIjkOh76sYPl-zQbY35YGb7C4nR9JF_6MkIZJ2aU04xao
